src/main.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

/*
#EBD2FF
#c69bca
#9e75a8
#4a245e
*/

/**GLOBAL**/
:root {
  --width: 480px;
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}

body {
  margin: 0;
  position: relative;
  height: 100%;
  background: linear-gradient(
    135deg,
    #84509f 0%,
    #5e3276 39%,
    #39124e 61%,
    #170123 100%
  );
  background-size:
    300% 100%,
    cover;
  animation: background-fade 5s linear infinite;
  animation-direction: alternate;
  background-attachment: fixed;
}

h1 {
  font-size: clamp(4.25rem, 5.5vw, 10rem);
  font-weight: 600;
  letter-spacing: 2px;
  width: max-content;
  color: #ebd2ff;
}

h3,
h4 {
  color: #ebd2ff;
  font-weight: 300;
  line-height: 1.5;
}

h3 {
  font-size: clamp(1.5rem, 2vw, 3rem);
}

h4 {
  font-size: clamp(1rem, 1.5vw, 1.25rem);
}

.material-icons {
  font-variation-settings:
    "FILL" 0,
    "wght" 200,
    "GRAD" 0,
    "opsz" 24;
  font-size: 5vw;
  color: #ebd2ff;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.shadow {
  box-shadow:
    0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
    0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
    0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
}

/**SWIPER PAGES**/
.swiper {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.slide-container {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.mySwiper {
  width: 100vw;
  height: 100%;
}

/**ACTIVE PAGE ANIMATIONS**/
#header,
#skill-cards,
#project-section,
#project-cards-section {
  opacity: 0;
}
.swiper-slide-active #header,
.swiper-slide-active #skill-cards,
.swiper-slide-active #project-section,
.swiper-slide-active #project-cards-section {
  opacity: 0;
}

.swiper-slide-active #header,
.swiper-slide-active #skill-cards,
.swiper-slide-active #project-section,
.swiper-slide-active #project-cards-section,
.down-indicator {
  animation: moveDown 0.8s ease-in forwards;
}

.swiper-slide-active #header,
.swiper-slide-active #project-section,
.down-indicator {
  animation-delay: 0.2s;
}

.swiper-slide-active #skills-cards,
.swiper-slide-active #project-cards-section {
  animation-delay: 0.8s;
}

/**SWIPER BULLETS**/
.swiper-pagination-bullet {
  width: 18px;
  height: 18px;
  background-color: #f9f2ff;
  border-radius: 50%;
  transition: all 0.6s ease-in-out;
}

.swiper-pagination-bullet-active {
  height: 36px;
  background-color: #ebd2ff;
  border-radius: 14px;
}

/**PRIMARY PAGE**/
#primary {
  margin-top: 4vh;
  display: grid;
  height: 100vh;
  grid-template-columns: 100%;
  grid-template-rows: 40% 40% 10%;
  column-gap: 10vh;
}

#header {
  width: 100%;
  overflow: hidden;

  display: grid;
  grid-template-columns: 55% 45%;
  grid-template-rows: 100%;
  column-gap: 2vw;
}

#header-text {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-left: 120px;
  text-align: center;
}

#header-image {
  height: 40vh;
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--width);
  aspect-ratio: 1/1;
  margin: 0 auto;
  border-radius: 50%;
  overflow: hidden;
}

#header-image img {
  display: block;
  width: calc(var(--width) / 2);
  filter: drop-shadow(5px 6px 5px rgba(36, 36, 42, 0.5));
  user-select: none;
  z-index: 1;
  border-radius: 50%;
}

#header-image img {
  animation: imgMoveDown 0.8s ease-in forwards 0.2s;
}

#skill-cards {
  width: 100%;
  display: grid;
  place-items: center;
}

/**SKILL CARDS**/
.card {
  text-align: center;
  background-color: #ebd2ff;
  border-radius: 20px;
  min-width: 20vw;
}

.skill-card-header {
  display: grid;
  grid-template-columns: 20% 60%;
  grid-template-rows: 100%;
  column-gap: 20%;
  align-items: center;
  justify-content: center;
  text-align: center;

  padding: 1vw 2vw 1vw 2vw;
  margin: 0;
  background-color: #4a245e;
  border-radius: 18px 18px 0 0;
}

.skill-symbol {
  font-variation-settings:
    "FILL" 0,
    "wght" 200,
    "GRAD" 0,
    "opsz" 24;
  font-size: 5vw;
  text-align: left;
}

.card ul {
  padding: 1vw;
}

.card ul li {
  list-style: none;
  font-size: clamp(1rem, 1.25vw, 1.5rem);
  color: #4a245e;
}

/**PROJECTS PAGE**/
#project-section {
  height: 90vh;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 5vw;
}

#project-grid-container {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 20% 80%;
}

#project-grid-container h1 {
  margin-left: 5vw;
  text-align: left;
}

#project-cards-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/**PROJECT CARDS**/
.project-card {
  display: grid;
  grid-template-columns: 35% 65%;
  grid-template-rows: 100%;
  column-gap: 5%;
  overflow: hidden;
  height: 90%;
  width: 100%;
}

.project-card .img-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.project-card img {
  max-width: 100%;
  max-height: 100%;
  border-radius: 18px;
}

.project-text-column {
  width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2vw;
  background-color: #4a245e;
  border-radius: 18px;
}

.project-text {
  display: grid;
  width: 100%;
  height: 100%;
  grid-template-columns: 100%;
  grid-template-rows: 10% 35% 40% 15%;
}

.project-text h3 {
  font-weight: 600;
}

.project-text p {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: clamp(1rem, 1.5rem, 2rem);
  color: #ebd2ff;
}

.row {
  margin: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.feature-list {
  display: flex;
  flex-direction: column;
  color: #ebd2ff;
  height: 100%;
  padding-left: 4vw;
}

.feature-list li {
  font-size: clamp(1rem, 1.5rem, 2rem);
  color: #ebd2ff;
}

.button {
  width: 80%;
  color: #4a245e;
  background-color: #ebd2ff;
  border-radius: 18px;
  font-size: clamp(1rem, 1.5vw, 2rem);

  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding: 1vw;
}

/**Contact Section**/
#contact-section {
  height: 90vh;
  width: 100%;
  margin: 5vw;
}

#contact-section h1 {
  margin-left: 5vw;
}

#contact-section form {
  border: 1px solid white;
  height: 70vh;
}

/**PDF Viewer**/
.pdf-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

/**Animations**/
@keyframes background-fade {
  from {
    background-position: right, center;
  }
}

@keyframes moveDown {
  0% {
    transform: translateY(-20px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes moveCardsDown {
  0% {
    transform: translateY(-40px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes imgMoveDown {
  0% {
    transform: translateY(calc(var(--width) / -5));
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

/**Responsiveness**/
@media (max-width: 1250px) {
  #header-text {
    padding-left: 90px;
  }
}

@media (max-width: 1075px) {
  :root {
    --width: 400px;
  }

  .swiper-slide .slide-container {
    column-gap: 20px;
  }

  #header-text {
    padding-left: 60px;
  }
}

@media (max-width: 990px) {
  :root {
    --width: 360px;
  }

  #header-text {
    padding-left: 60px;
  }
}

@media (max-width: 790px) {
  #primary {
    display: grid;
    grid-template-rows: 40% 40% 10%;
    grid-template-columns: 100%;
  }

  #header {
    grid-template-columns: 60% 40%;
  }

  #header-text {
    margin: 0;
  }

  h1 {
    font-size: clamp(2.5rem, 2.75vw, 3rem);
    margin-bottom: 16px;
    width: unset;
    line-height: 1.1;
  }

  h2 {
    padding-bottom: 0;
  }

  h3 {
    font-size: clamp(1.5rem, 2vw, 2.5rem);
  }

  .project-text p,
  .project-text ul li {
    font-size: clamp(0.5rem, 0.8rem, 1rem);
  }

  #header-image {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
  }

  .skill-card-header {
    border-radius: 18px 18px 18px 18px;
  }

  .cards {
    grid-template-columns: 100%;
    grid-template-rows: 30% 30% 30%;
  }

  .card {
    min-width: 50vw;
    margin: 1vw;
  }

  .swiper-pagination-bullet {
    width: 14px;
    height: 14px;
  }

  .swiper-pagination-bullet-active {
    height: 28px;
  }

  .material-symbols-outlined {
    font-size: 10vw;
  }

  #project-grid-container {
    height: 90vh;
    grid-template-rows: 10% 80%;
  }

  .project-card {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 35% 55%;
    row-gap: 10%;
    overflow: hidden;
    height: 100%;
    width: 100%;
    padding: 2vw;
  }

  .project-text {
    padding: 2vw;
  }

  .project-text-column {
    margin-left: 5vw;
  }

  .pdf-viewer {
    max-width: 100%;
    margin-right: 0;
  }

  .pdf-page {
    width: 100%;
  }
}

@media (max-width: 485px) {
  :root {
    --width: 280px;
  }
}

